--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -14,8 +14,9 @@ $gray-dark:              #2C3E50 !default;   // #333
 $gray:                   #95a5a6 !default; // #555
 $gray-light:             #b4bcc2 !default;   // #999
 $gray-lighter:           #ecf0f1 !default; // #eee
+$brand-link:             #b388ff !default;
 
-$brand-primary:         #bbdefb !default;
+$brand-primary:         #5c6bc0 !default;
 $brand-success:         #18BC9C !default;
 $brand-info:            #3498DB !default;
 $brand-warning:         #F39C12 !default;
@@ -32,9 +33,9 @@ $body-bg:               #fff !default;
 $text-color:            $brand-primary !default;
 
 //** Global textual link color.
-$link-color:            $brand-success !default;
+$link-color:            $brand-link !default;
 //** Link hover color set via `darken()` function.
-$link-hover-color:      $link-color !default;
+$link-hover-color:      $brand-link !default;
 //** Link hover decoration.
 $link-hover-decoration: underline !default;
 
